--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.6.3",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0",
     "zod": "^3.25.67"
   },
   "devDependencies": {
